--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -49,3 +49,89 @@
         }
     }
 }
+
+.home-header-banner {
+    background: url("../../assets/header-background.jpg");
+    height: 485px;
+    background-repeat: no-repeat; //với ảnh nhỏ quá thì tùy chỉnh xem có mốn reapeat hay không
+    background-size: cover;
+    background-position: center; //với những ảnh to quá thì nó bị lệch-> muốn xem đoạn giữa thì dùng
+    display: flex;
+    flex-direction: column; //cài đặt flex theo chiều dọc
+    .content-up {
+        border: 1px solid chartreuse;
+        height: 50%;
+        padding-top: 15px;
+        .title1 {
+            text-align: center;
+            font-size: 30px;
+            text-shadow: 1px 1px 1px #333; //đổ bóng giúp cho mình cảm giác chữ nổi lên
+            margin-top: 30px;
+            margin-bottom: 5px;
+            color: white;
+        }
+        .title2 {
+            text-align: center;
+            font-size: 30px;
+            margin-bottom: 15px;
+            text-shadow: 1px 1px 1px #333;
+            color: white;
+        }
+        .search {
+            width: fit-content; //cái khung bằng đúng luôn các hình bên trong thay vì width=size màn hình
+            display: flex;
+            align-items: center;
+            //justify-content: center; //căn giữa không ăn vs justify-content+width:fit-content thì ta dùng margin:0 auto
+            margin: 0 auto;
+            padding: 10px;
+            border-radius: 25px;
+            background: #f7d800;
+            i {
+                margin: 0 5px;
+            }
+            input {
+                height: 30px;
+                width: 360px;
+                background: transparent; //cho nó cùng màu vs lớp cha, không thì mặc định là input sẽ màu white
+                border: none; //mất border khung input
+                outline: none; //khi click vào thì nó không hiện border
+            }
+        }
+    }
+    .content-down {
+        border: solid 1px chocolate;
+        height: 50%;
+        .options {
+            text-align: center;
+            display: flex;
+            gap: 50px; //khoa cach dua cac thang child
+            justify-content: center;
+            .option-child {
+                width: 100px;
+                border: 1px solid red;
+                .icon-child {
+                    background: white;
+                    width: 40px;
+                    height: 40px;
+                    padding: 10px;
+                    border-radius: 50%;
+                    text-align: center;
+                    margin: 0 auto;
+                    i {
+                        color: #49bce2;
+                        font-size: 20px;
+                    }
+                }
+                .text-child {
+                    font-size: 17px;
+                    font-weight: 500;
+                    cursor: pointer;
+                    &:hover {
+                        //hiệu ứng khi trỏ chuột
+                        color: #49bce2;
+                    }
+                }
+            }
+        }
+    }
+}
