tạo scrollbar và react-slick

--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -139,6 +139,7 @@
         align-items: flex-end;
         justify-content: center;
         //copy tren booking care
+        padding-bottom: 10px;
         background-image: linear-gradient(
             rgba(255, 255, 255, 0.1),
             rgba(255, 255, 255, 0.9),
