Học cách custom menu bar

--- a/src/components/Navigator.scss
+++ b/src/components/Navigator.scss
@@ -35,6 +35,12 @@
                 height: 35px;
                 line-height: 35px;
                 text-transform: none;
+                &.active {
+                    a {
+                        color: orange !important;
+                    }
+                    color: #ededed;
+                }
                 .menu-link {
                     text-decoration: none;
                     color: $text-in-light;
@@ -68,10 +74,6 @@
                             color: $colormain;
                         }
                     }
-                }
-                &.active span {
-                    font-weight: 500;
-                    color: $colormain;
                 }
                 &:hover {
                     background-color: darken($bg-menu-color, 3);
