--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -32,7 +32,10 @@
         background: #eceaea !important ;
     }
 }
-
+.slick-disabled {
+    //cái đầu tiên và cái cuối cùng sẽ mất arrow
+    display: none !important;
+}
 .section-share {
     &.section-specialty {
         background: #f5f5f5;
