--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -117,6 +117,7 @@
 .section-outstanding-doctor {
     .section-customize {
         padding: 5px;
+        cursor: pointer;
         .customize-border {
             padding: 20px;
             border: solid orange 1px;
