Hoàn thiện css detailDoctor, trên homeHeader khi click logo thì về trang home, học cách chuyển đổi linh hoạt 2 trạng thái bằng cách thêm 1 biến dạng boolean trong state

--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -1,12 +1,9 @@
 .doctor-detail-container {
-    border: red 1px solid;
     height: 500px;
-    margin: 0 100px;
     .intro-doctor {
         display: flex;
         // height: 100px; Bỏ chiều cao thằng cha thì chiều cao thằng con bằng chính xác chiều cao thằng cha
         .content-left {
-            border: green 1px solid;
             width: 20%;
             background: center center no-repeat;
             width: 120px;
@@ -15,7 +12,6 @@
             margin: 10px 20px;
         }
         .content-right {
-            border: gray 1px solid;
             width: 80%;
             display: flex;
             flex-direction: column;
@@ -29,5 +25,20 @@
                 padding-top: 10px;
             }
         }
+    }
+    .detail-infor-doctor {
+        padding: 10px 100px;
+        border-top: 1px solid #ddd;
+        border-bottom: 1px solid #ddd;
+        background-color: #f9f9f9;
+        .h3 {
+            font-size: 17px;
+        }
+        img {
+            width: 100%;
+        }
+    }
+    .comment-doctor {
+        height: 50px;
     }
 }
