--- a/src/components/Navigator.scss
+++ b/src/components/Navigator.scss
@@ -30,7 +30,7 @@
             position: absolute;
             padding: 0;
             .menu {
-                width: 205px;
+                width: 100%; //text to đến đâu menu to đến đấy
                 padding: 0 15px;
                 height: 35px;
                 line-height: 35px;
