--- a/src/containers/System/Doctor/DoctorExtraInfor.scss
+++ b/src/containers/System/Doctor/DoctorExtraInfor.scss
@@ -18,9 +18,12 @@
     }
     .content-down {
         .short-infor {
-            span {
+            .detail {
                 cursor: pointer;
                 color: #45c3d2;
+            }
+            .currency {
+                margin: 0 5px;
             }
         }
         .title-price {
