--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -5,7 +5,7 @@
     background-color: white;
     position: sticky; //cài sticky cho thanh header chạy theo khi scroll, dùng kèm top:0;
     top: 0; //xác định tọa độ gắn sticky so vs màn hình
-    z-index: 10000; //cho z index để khi cuộn chuột cho nó mượt
+    z-index: 100; //cho z index để khi cuộn chuột cho nó không bị đè, cả thanh header nữa(đừng cho cao quá VD 10000 thì tk modal muốn transaction rất là mệt)
     .home-header-content {
         width: 100%;
         height: 100%;
