--- a/src/containers/HomePage/Section/Specialty.scss
+++ b/src/containers/HomePage/Section/Specialty.scss
@@ -1,49 +1,9 @@
-.section-speciality {
-    height: 330px;
-    background: #f5f5f5;
-    .section-contaiter {
-        margin: 0 100px;
-        display: flex;
-        flex-direction: column;
-
-        .section-header {
-            height: 60px;
-            margin-bottom: 30px;
-            padding-top: 30px;
-            .title-section {
-                font-size: 22px;
-                font-weight: 600;
-            }
-            .btn-section {
-                float: right; //cho sang bên phải
-                padding: 10px 15px;
-                border: none;
-                outline: none;
-                display: block;
-                background: #ebebed;
-                color: black;
-                cursor: pointer;
-                text-transform: uppercase; //cách chuyển text
-                &:hover {
-                    color: #fff;
-                    background: #f7d800;
-                }
-            }
-        }
-
-        .section-body {
-            .specialty-customize {
-                .bg-image {
-                    height: 150px;
-                    width: 278px; //dùng với div thì ảnh ko bị vỡ như img nhưng phải set chiều cao
-                    background: url("../../../assets/specialty/co-xuong-khop.jpg");
-                    background-position: center center; //chỉnh center bên trong cái img, không liên quan khung ảnh
-                    background-repeat: no-repeat;
-                    background-size: cover;
-                    background-color: #eee;
-                }
-            }
-            //reset slick slider css
+.specialty-child {
+    cursor: pointer;
+    .specialty-name {
+        padding: 10px 0;
+        &:hover {
+            color: #45c3d2;
         }
     }
 }
