--- a/src/containers/Patient/Doctor/DoctorSchedule.scss
+++ b/src/containers/Patient/Doctor/DoctorSchedule.scss
@@ -1,6 +1,6 @@
 .manage-schedule-container {
     height: 100%;
-    border-right: 1px solid green;
+    border-right: 1px solid #ddd;
 
     .all-schedule {
         select {
