Hoàn Thiện Chức Năng Xem Chi Tiết Chyên Khoa Khám Bệnh

--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -1,11 +1,31 @@
 .detail-specialty-container {
-    .description-specialty {
-        border: 1px solid red;
-    }
     .detail-specialty-body {
-        margin: 0 100px;
+        .description-specialty {
+            background-color: white !important;
+            padding: 10px;
+            margin: 15px 0;
+            h1,
+            h2,
+            h3 {
+                font-size: 16px;
+                font-weight: 600;
+            }
+        }
+        padding: 0 100px;
+        background: #eee;
+        display: flex;
+        flex-direction: column;
     }
-
+    .search-sp-doctor {
+        select {
+            height: 30px;
+            padding: 5px 8px;
+            border: none;
+            outline: none;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+    }
     .each-doctor {
         display: flex;
         width: 100%;
@@ -19,6 +39,12 @@
         .dt-content-left {
             width: 50%;
             border-right: 1px solid #ddd;
+            //ghi đè css profile doctor
+            .profile-doctor-container {
+                .down {
+                    padding: 5px;
+                }
+            }
         }
         .dt-content-right {
             width: 50%;
