Hiển Thị Danh Sách Bệnh Nhân Đặt Lịch Khám Bệnh Cho Bác Sỹ

--- a/src/containers/System/Doctor/ManagePatient.scss
+++ b/src/containers/System/Doctor/ManagePatient.scss
@@ -35,6 +35,22 @@
                 background-color: #04aa6d;
                 color: white;
             }
+            button {
+                border: none;
+                outline: none;
+                cursor: pointer;
+            }
+            .mp-btn-confirm {
+                margin-right: 10px;
+                height: 30px;
+                border-radius: 3px;
+                background: orange;
+            }
+            .mp-btn-remedy {
+                height: 30px;
+                border-radius: 3px;
+                background: #39dca0;
+            }
         }
     }
 }
