--- a/src/containers/System/Doctor/ManagePatient.scss
+++ b/src/containers/System/Doctor/ManagePatient.scss
@@ -54,3 +54,10 @@
         }
     }
 }
+//muốn full màn hình loading_overlay_wrapper
+div._loading_overlay_wrapper {
+    position: unset;
+    ._loading_overlay_overlay {
+        z-index: 1000000;
+    }
+}
