--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -7,7 +7,10 @@
         // height: 100px; Bỏ chiều cao thằng cha thì chiều cao thằng con bằng chính xác chiều cao thằng cha
         .content-left {
             width: 20%;
-            background: center center no-repeat;
+            // background: center center no-repeat;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             width: 120px;
             height: 120px;
             border-radius: 50%;
@@ -45,7 +48,9 @@
         border-top: 1px solid #ddd;
         border-bottom: 1px solid #ddd;
         background-color: #f9f9f9;
-        .h3 {
+        h1,
+        h2,
+        h3 {
             font-size: 17px;
         }
         img {
@@ -54,6 +59,6 @@
     }
 
     .comment-doctor {
-        height: 50px;
+        padding: 10px 100px;
     }
 }
